# test-task

./: .gitignore  Makefile  app.py  docker_compose.yaml  nginx.conf
backend/: .env.example  Dockerfile  entrypoint.sh  pyproject.toml
backend/project/cats/: admin.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
backend/project/cats/migrations/: 0001_initial.py  0002_alter_cat_breeder.py  0003_alter_user_is_breeder.py
backend/project/project/: asgi.py  urls.py
backend/project/project/settings/: main.py  prod.py
frontend/: Dockerfile  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: Auth.jsx  BreederDetail.jsx  BreederList.jsx  CatDetail.jsx  CatList.jsx  NavigationBar.jsx  api.jsx
